<resources>
    <string name="app_name">PowerManager</string>
    <string name="title_activity_nav_drawer">Nav_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello Customer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="title_activity_nav__drawer">Nav_Drawer</string>
    <string name="header_welcome">Welcome to PowerManager</string>
    <string name="header_create">Create a New Account</string>
    <string name="prompt_name">Name</string>
    <string name="hint_username">John Smith</string>
    <string name="line1">-> Reducing power losses, assimilation of renewable energy and load management all over</string>
    <string name="line2">-> Notifies the user of their electricity consumption</string>
    <string name="line3">-> Minimizes Bill Amount</string>
    <string name="line4">-> Monitors day-to-day usage</string>
    <string name="line5">-> Developers</string>
    <string name="line6">Rohan Seth</string>
    <string name="line7">Souvik Gorai</string>
    <string name="line8">Prabhat Tripathi</string>
    <string name="version">Version: 1.0.0</string>
    <string name="contact">E-Mail: powermanagerproject@gmail.com\nPhone: +91 8658558521\n\t\t\t\t\t\t+91 8115888352</string>



</resources>