<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:text="@string/line1"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/line2"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@+id/tb1"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tb3"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/line3"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@+id/tb2"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tb4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/line4"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@+id/tb3"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tb5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/line5"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@+id/tb4"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tb6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:gravity="left"
        android:text="@string/line6"
        android:textSize="17dp"
        android:paddingLeft="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tb5"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:paddingLeft="30dp"
        android:text="@string/line7"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@+id/tb6"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="left"
        android:paddingLeft="30dp"
        android:text="@string/line8"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />


</android.support.constraint.ConstraintLayout>