<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_create_fragment"
    android:background="@color/colorPrimary"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/lbl_create_header"
            style="@style/Label.CredentialHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/header_create" />

        <TextView
            android:id="@+id/lbl_create_name_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Label.Sub"
            android:layout_below="@id/lbl_create_header"
            android:text="@string/prompt_name"
            />
        <EditText
            android:id="@+id/edt_create_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputField.Credential.Name"
            android:hint="@string/hint_username"
            android:layout_below="@+id/lbl_create_name_sub"
            android:gravity="center_horizontal"
            />

    </RelativeLayout>


</FrameLayout>